[package]
name = "data-processor"
version = "0.1.0"
authors = ["Chubak <chubakbidpaa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rake = "0.1"
futures = "0.3"
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver", features = ["async-std-runtime"], default-features = false }
env_logger = "0.7.1"
log = "0.4.8"
bson = "0.14.1"
femme = "1.3.0"
